--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
+  "private": true,
   "name": "eater-of-hope",
   "version": "0.1.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint .",
+    "lint:styles": "stylelint **/*.css",
+    "test": "NODE_ENV=test TZ=UTC jest",
+    "test:coverage": "npm test -- --coverage",
+    "test:watch": "npm test -- --watch"
   },
   "repository": {
     "type": "git",
@@ -15,5 +19,38 @@
   "bugs": {
     "url": "https://github.com/benjaminkimball/eater-of-hope/issues"
   },
-  "homepage": "https://github.com/benjaminkimball/eater-of-hope#readme"
+  "homepage": "https://github.com/benjaminkimball/eater-of-hope#readme",
+  "dependencies": {
+    "express": "^4.16.3",
+    "helmet": "^3.12.1",
+    "morgan": "^1.9.0",
+    "prop-types": "^15.6.2",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1"
+  },
+  "devDependencies": {
+    "babel-eslint": "^8.2.6",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "dotenv": "^6.0.0",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "eslint": "^5.1.0",
+    "eslint-config-standard": "^11.0.0",
+    "eslint-config-standard-react": "^6.0.0",
+    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-jest": "^21.18.0",
+    "eslint-plugin-node": "^7.0.1",
+    "eslint-plugin-promise": "^3.8.0",
+    "eslint-plugin-react": "^7.10.0",
+    "eslint-plugin-security": "^1.4.0",
+    "eslint-plugin-standard": "^3.1.0",
+    "jest": "^23.4.1",
+    "nodemon": "^1.18.3",
+    "parcel-bundler": "^1.9.7",
+    "stylelint": "^9.3.0",
+    "stylelint-config-standard": "^18.2.0"
+  }
 }
