--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "lint": "eslint .",
     "lint:styles": "stylelint **/*.css",
+    "start": "NODE_ENV=development TZ=UTC npm-run-all --parallel start:client start:server",
     "start:client": "parcel src/client/index.html",
     "start:server": "nodemon -x 'node -r dotenv/config' src/server/index.js",
     "test": "NODE_ENV=test TZ=UTC jest",
@@ -52,6 +53,7 @@
     "eslint-plugin-standard": "^3.1.0",
     "jest": "^23.4.1",
     "nodemon": "^1.18.3",
+    "npm-run-all": "^4.1.3",
     "parcel-bundler": "^1.9.7",
     "stylelint": "^9.3.0",
     "stylelint-config-standard": "^18.2.0"
