--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "version": "0.1.0",
   "description": "",
   "scripts": {
+    "build": "parcel build src/client/index.html",
     "lint": "eslint .",
     "lint:styles": "stylelint **/*.css",
-    "start": "NODE_ENV=development TZ=UTC npm-run-all --parallel start:client start:server",
+    "start": "NODE_ENV=development TZ=UTC; npm run start:client | npm run start:server",
     "start:client": "parcel src/client/index.html",
     "start:server": "nodemon -x 'node -r dotenv/config' src/server/index.js",
     "test": "NODE_ENV=test TZ=UTC jest",
@@ -30,7 +31,8 @@
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^4.3.1",
+    "serialize-javascript": "^1.5.0"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.6",
@@ -53,7 +55,6 @@
     "eslint-plugin-standard": "^3.1.0",
     "jest": "^23.4.1",
     "nodemon": "^1.18.3",
-    "npm-run-all": "^4.1.3",
     "parcel-bundler": "^1.9.7",
     "stylelint": "^9.3.0",
     "stylelint-config-standard": "^18.2.0"
