--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "description": "",
   "scripts": {
     "build": "parcel build src/client/index.html",
+    "client": "parcel src/client/index.html",
     "lint": "eslint .",
     "lint:styles": "stylelint **/*.css",
-    "start:client": "parcel src/client/index.html",
-    "start:server": "nodemon src/server/index.js",
+    "server": "nodemon src/server/index.js",
+    "start": "echo '\\033[1mReview the README to get up and running!\\033[0m'",
     "test": "NODE_ENV=test TZ=UTC jest",
     "test:coverage": "npm test -- --coverage",
     "test:watch": "npm test -- --watch"
