--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,1 +1,4 @@
-extends: stylelint-config-standard
+extends:
+  - stylelint-config-standard
+  - stylelint-config-styled-components
+processors: stylelint-processor-styled-components
