--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0",
     "reselect": "^3.0.1",
     "serialize-javascript": "^1.5.0",
     "styled-components": "^3.4.5"
