--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "parcel build src/client/index.html",
     "client": "parcel src/client/index.html",
     "lint": "eslint .",
-    "lint:styles": "stylelint src/client/**/*.js",
+    "lint:styles": "stylelint src/client/**/*.css",
     "server": "nodemon src/server/index.js",
     "start": "echo '\\033[1mReview the README to get up and running!'",
     "test": "NODE_ENV=test TZ=UTC jest",
@@ -37,13 +37,11 @@
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
     "reselect": "^3.0.1",
-    "serialize-javascript": "^1.5.0",
-    "styled-components": "^3.4.5"
+    "serialize-javascript": "^1.5.0"
   },
   "devDependencies": {
     "babel-eslint": "^9.0.0",
     "babel-plugin-lodash": "^3.3.4",
-    "babel-plugin-styled-components": "^1.6.1",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
@@ -66,8 +64,6 @@
     "npm-run-all": "^4.1.3",
     "parcel-bundler": "^1.9.7",
     "stylelint": "^9.5.0",
-    "stylelint-config-standard": "^18.2.0",
-    "stylelint-config-styled-components": "^0.1.1",
-    "stylelint-processor-styled-components": "^1.3.2"
+    "stylelint-config-standard": "^18.2.0"
   }
 }
