--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "serialize-javascript": "^1.5.0"
   },
   "devDependencies": {
+    "@google-cloud/storage": "^2.0.3",
+    "async": "^2.6.1",
     "babel-eslint": "^9.0.0",
     "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-transform-class-properties": "^6.24.1",
