--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
   "homepage": "https://github.com/benjaminkimball/eater-of-hope#readme",
   "dependencies": {
     "express": "^4.16.3",
+    "express-winston": "^3.0.0",
     "helmet": "^3.13.0",
     "lodash": "^4.17.11",
-    "morgan": "^1.9.1",
     "prop-types": "^15.6.2",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
@@ -38,7 +38,8 @@
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
     "reselect": "^3.0.1",
-    "serialize-javascript": "^1.5.0"
+    "serialize-javascript": "^1.5.0",
+    "winston": "^3.1.0"
   },
   "devDependencies": {
     "@google-cloud/storage": "^2.0.3",
