--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express-winston": "^3.0.0",
     "helmet": "^3.13.0",
     "lodash": "^4.17.11",
+    "nconf": "^0.10.0",
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
@@ -47,7 +48,6 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
-    "dotenv": "^6.0.0",
     "enzyme": "^3.6.0",
     "enzyme-adapter-react-16": "^1.5.0",
     "eslint": "^5.6.0",
