Remove a lot of stuffs

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,11 +1,13 @@
 env:
   jest/globals: true
 extends:
+  - plugin:flowtype/recommended
   - plugin:jest/recommended
   - plugin:security/recommended
   - standard
   - standard-react
 parser: babel-eslint
 plugins:
+  - flowtype
   - jest
   - security
