--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,10 @@
 {
   "plugins": [
-    "lodash",
-    "transform-class-properties",
-    "transform-object-rest-spread"
+    "@babel/plugin-syntax-class-properties",
+    "@babel/plugin-syntax-object-rest-spread"
   ],
-  "presets": ["env", "react"]
+  "presets": [
+    "@babel/preset-env",
+    "@babel/preset-react"
+  ]
 }
