--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,18 @@
 {
+  "env": {
+    "test": {
+      "presets": [
+        "@babel/preset-env",
+        "@babel/preset-react"
+      ]
+    }
+  },
   "plugins": [
     "@babel/plugin-syntax-class-properties",
     "@babel/plugin-syntax-object-rest-spread"
   ],
   "presets": [
-    "@babel/preset-env",
+    ["@babel/preset-env", { "modules": false }],
     "@babel/preset-react"
   ]
 }
