--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint:styles": "stylelint src/client/**/*.css",
     "server": "nodemon src/server/index.js",
     "start": "echo '\\033[1mReview the README to get up and running!'",
-    "test": "NODE_ENV=test TZ=UTC jest",
+    "test": "TZ=UTC jest",
     "test:coverage": "npm test -- --coverage",
     "test:watch": "npm test -- --watch"
   },
@@ -40,13 +40,13 @@
     "@babel/plugin-syntax-object-rest-spread": "^7.0.0",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.6.0",
     "eslint": "^5.6.1",
     "eslint-config-standard": "^12.0.0",
     "eslint-config-standard-react": "^7.0.2",
-    "eslint-plugin-flowtype": "^2.50.3",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jest": "^21.24.1",
     "eslint-plugin-node": "^7.0.1",
@@ -58,6 +58,7 @@
     "nodemon": "^1.18.4",
     "npm-run-all": "^4.1.3",
     "parcel-bundler": "^1.10.2",
+    "regenerator-runtime": "^0.12.1",
     "stylelint": "^9.6.0",
     "stylelint-config-standard": "^18.2.0"
   }
